--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}"
     <title>Link Shortener</title>
     <style>
         body {
@@ -69,13 +70,13 @@
   <button type="submit">Shorten Link</button>
 </form>
 <p id="message" style="color: red; font-family: Arial, Helvetica, sans-serif;">{{ message }}</p>
-<p id="shortened-link" tabindex="0" style="-webkit-user-select: text; -moz-user-select: text; -ms-user-select: text; user-select: text;">{{ shortened_link }}</p>
-<p><a href="http://{{ full_link }}"><img style="width: 25px; height: 25px;" src="{{ url_for('static', filename='images/go.webp')}}"></a></p>
+<p id="short_link_code">{{ short_link_code }}</p>
+<p><a href="http://{{ redirect_link }}"><img style="width: 25px; height: 25px;" src="{{ url_for('static', filename='images/go.webp')}}"></a></p>
 <script>
-    document.getElementById('shortened-link').addEventListener('click', function() {
-        const text = document.getElementById('shortened-link').innerText;
+    document.getElementById('short_link_code').addEventListener('click', function() {
+        const text = document.getElementById('short_link_code').innerText;
         const textarea = document.createElement('textarea');
-        textarea.value = text;
+        textarea.value = 'http://{{ redirect_link }}';
         document.body.appendChild(textarea);
         textarea.select();
         document.execCommand('copy');
